<resources>
    <string name="app_name">洞察+</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_name">注册</string>
    <string name="forget_password_name">忘记密码</string>
    <string name="login_register_name">新用户注册</string>
    <string name="verify_phone_next">下一步</string>
    <string name="register_login_name">帐号登录</string>
    <string name="user_protocol_name">用户协议</string>
    <string name="login_name">登录</string>
    <string name="register_reset_name">重置</string>
    <string name="code_name">发送验证码</string>
    <string name="hint_phone_name">请输入手机号</string>
    <string name="hint_pwd_name">创建密码</string>
    <string name="hint_verifycode_name">请输入验证码</string>
    <string name="hint_input_pwd_name">请输入密码</string>
    <string name="hint_pwd_name2">再次输入密码</string>
    <string name="hint_code_name">请输入验证码</string>
    <string name="hint_phoneoremail_name">请输入邮箱/手机</string>
    <string name="image_transition">image_transition</string>
    <string name="text_third_login">第三方帐号登陆</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="text">众所周知,罗马教廷是全世界天主教的中枢,理论上,世界各地的天主教机构,皆为罗马教廷的分支,受罗马教皇领导.</string>
    <string name="news_text_title">软银还债抛售80亿美元阿里股份 阿里:乐于回购</string> 
    <string name="news_text_content">AR技术可以利用计算机生成一种逼真的视、听、力、触和动等感觉的虚拟环境,通过各种传感设备使。。。</string>
    <string name="opinion_text_content">fgdfg</string>
    <string name="opinion_text_title">fgdfg</string>
    <string name="text_qa_detail_info">公开此问答，即表示您愿意与其他人分享问题与答案，并因此获取收益</string>
    <string name="bind_phone_1">绑定手机号之后,你可以使用"手机号+密码"登录</string>
    <string name="bind_phone_2">洞察+,你也可以使用手机找回密码</string>
    <string name="about_intersight">洞察+,是一种新型的知识、技能、资讯的共享平台。通过这个平台,各类金融机构、咨询公司、企业,以及政府机构匹配投研
    咨询需求,连接洞察家,获取知识共享服务,以帮助其作出正确的商业决策。同时,越来越多的人将自己的知识,技能作为可分享资源,成为洞察家,并且通过这个平台构建起一个新型的自媒体联盟,为社会、为他人贡献智慧。</string>

</resources>
