<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background_default"
    tools:context="com.tripint.intersight.fragment.mine.setting.BindPhoneFragment">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/spacing_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/bind_phone_image"
            android:src="@mipmap/iconfont_phone"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/width_10_80"
            android:layout_height="@dimen/height_10_80" />

        <TextView
            android:id="@+id/bind_phone_textview"
            android:layout_below="@id/bind_phone_image"
            android:layout_marginTop="@dimen/spacing"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/line"
            android:text="@string/bind_phone_1"
            />

        <TextView
            android:layout_below="@id/bind_phone_textview"
            android:layout_marginTop="@dimen/spacing"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/line"
            android:text="@string/bind_phone_2"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_6_80"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/bind_phone_et_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/white"
            android:hint="@string/hint_phone_name"
            android:textColorHint="@color/line" />

        <Button
            android:id="@+id/bind_phone_btn_verifyCode"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@drawable/register_button_shape"
            android:text="@string/code_name"
            android:textSize="12sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_6_80"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/bind_phone_et_input_verifyCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@null"
            android:textColor="@color/white"
            android:maxLines="1"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:hint="@string/hint_verifycode_name"
            android:textColorHint="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/line" />

    <Button
        android:id="@+id/bind_phone_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_5_80"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_shape_blue"
        android:text="完成"
        android:textSize="@dimen/text_size_15"
        android:textColor="@color/line" />
</LinearLayout>
