<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context="com.tripint.intersight.activity.ResigterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="21dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="19dp"
            android:text="@string/register_name"
            android:textColor="@color/line"
            android:textSize="@dimen/text_size"
            android:typeface="normal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/iconfont_phone" />

        <EditText
            android:id="@+id/register_et_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@null"
            android:hint="@string/hint_phone_name"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />

        <Button
            android:id="@+id/register_verify_code"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@drawable/register_button_shape"
            android:text="@string/code_name"
            android:textSize="10sp"
            android:textColor="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/iconfont_mima" />

        <EditText
            android:id="@+id/register_create_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@null"
            android:hint="@string/hint_pwd_name"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/iconfont_mima" />

        <EditText
            android:id="@+id/register_input_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@null"
            android:hint="@string/hint_pwd_name2"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/iconfont_key" />

        <EditText
            android:id="@+id/register_input_verify_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@null"
            android:hint="@string/hint_code_name"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我接受此"
            android:textColor="@color/line" />

        <TextView
            android:id="@+id/register_tv_userProtocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《用户协议》"
            android:textColor="@color/blue" />
    </LinearLayout>


    <Button
        android:id="@+id/register_button_register"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_shape"
        android:text="@string/register_name"
        android:textSize="14sp"
        android:textColor="@color/line" />


    <Button
        android:id="@+id/register_button_reset"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:background="@drawable/btn_shape"
        android:text="@string/register_reset_name"
        android:textColor="@color/line" />


</LinearLayout>
