<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background"
    tools:context="com.tripint.intersight.activity.VerifyPhoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="手机验证"
            android:textColor="@color/line"
            android:textSize="@dimen/text_size"
            android:typeface="normal" />
    </RelativeLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/dongcha"
            android:layout_width="150dp"
            android:layout_height="70dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@null"
            android:hint="@string/hint_phone_name"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />

        <Button
            android:id="@+id/btn_verifyCode"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@drawable/register_button_shape"
            android:text="@string/code_name"
            android:textSize="12sp"
            android:textColor="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/et_input_verifyCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@null"
            android:hint="@string/hint_verifycode_name"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/line" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape"
        android:text="@string/verify_phone_next"
        android:textColor="@color/line" />
</LinearLayout>
