<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background"
    tools:context="com.tripint.intersight.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="21dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_login_name"
            android:textColor="@color/line"
            android:textSize="@dimen/text_size"
            android:typeface="normal" />
    </RelativeLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/dongcha"
            android:layout_width="120dp"
            android:layout_height="70dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@null"
            android:textSize="@dimen/text_size"
            android:textColor="@color/line"
            android:hint="@string/hint_phoneoremail_name"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@null"
            android:textSize="@dimen/text_size"
            android:textColor="@color/line"
            android:hint="@string/hint_input_pwd_name"
            android:paddingLeft="10dp"
            android:textColorHint="@color/line" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_forget_pwd"
            android:text="忘记密码?"
            android:textSize="@dimen/text_size_forget_pwd"
            android:layout_alignParentRight="true"
            android:textColor="@color/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_shape"
        android:textSize="14sp"
        android:text="@string/login_name"
        android:textColor="@color/line" />
    <Button
        android:id="@+id/login_button_register"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_shape"
        android:text="@string/login_register_name"
        android:textSize="14sp"
        android:textColor="@color/line" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/line"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/line"
            android:text="@string/text_third_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/line"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_thirdLogin_linkedin"
            android:text="Linkedin"
            android:textSize="10sp"
            android:textColor="@color/line"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/login_thirdLogin_wechat"
            android:text="Wechat"
            android:textColor="@color/line"
            android:textSize="10sp"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
